<resources>
    <string name="app_name">trip_helper</string>
    <string name="mainTitle">Twoje wyjazdy</string>
    <string name="newRideTitle">Nowa trasa</string>
    <string name="editRideTitle">Edytuj trasę</string>
    <string name="newSectionTitle">Nowy odcinek trasy</string>
    <string name="editSectionTitle">Edytuj odcinek trasy</string>
    <string name="textViewRideName">Nazwa:</string>
    <string name="editTextRideName">np. Wakacje 2022</string>
    <string name="textViewFuelConsumption">Spalanie:</string>
    <string name="editTextFuelConsumption">np. 6.3</string>
    <string name="textViewFuelConsumptionUnit">l/100km</string>
    <string name="textViewFuelPrice">Cena paliwa:</string>
    <string name="editTextFuelPrice">np. 5.75</string>
    <string name="textViewFuelPriceUnit">zł</string>
    <string name="textViewNumOfPassengers">Liczba pasażerów</string>
    <string name="editTextNumOfPassengers">np. 5</string>
    <string name="buttonSave">Zapisz</string>
    <string name="buttonCancel">Anuluj</string>
    <string name="emptyFieldError">Pole nie może być puste</string>
    <string name="itemDeleteAllRides">Usuń wszystkie</string>
    <string name="textViewOrigin">Punkt początkowy:</string>
    <string name="editTextOrigin">np. Lublin</string>
    <string name="textViewDestination">Punkt końcowy:</string>
    <string name="editTextDestination">np. Warszawa</string>
    <string name="textViewDistance">Dystans:</string>
    <string name="editTextDistance">np. 175</string>
    <string name="textViewDistanceUnit">km</string>
    <string name="buttonNewSection">Dodaj odcinek trasy</string>
    <string name="itemEditRide">Edytuj</string>
    <string name="itemDeleteRide">Usuń trasę</string>
    <string name="deleteRideDialogTitle">Usunąć trasę?</string>
    <string name="deleteAllRidesDialogTitle">Usunąć wszystkie trasy?</string>
    <string name="deletePassengerDialogTitle">Usunąć pasażera?</string>
    <string name="dialogDeleteButton">Usuń</string>
    <string name="dialogCancelButton">Anuluj</string>
    <string name="deletedRideToast">Usunięto trasę</string>
    <string name="deletedAllRidesToast">Usunięto wszystkie trasy</string>
    <string name="buttonDeleteSection">Usuń odcinek</string>
    <string name="deleteSectionDialogTitle">Usunąć odcinek trasy?</string>
    <string name="deletedSectionToast">Usunięto odcinek trasy</string>
    <string name="deletedPassengerToast">Usunięto pasażera</string>
    <string name="textViewAddPassengers">Kto bierze udział w przejeździe?</string>
    <string name="itemEditPassengers">Zarządzaj pasażerami</string>
    <string name="buttonNewPassenger">Dodaj pasażera</string>
    <string name="textViewPassengerName">Pasażer</string>
    <string name="editTextPassengerName">np. Jan</string>
    <string name="buttonDeletePassenger">Usuń pasażera</string>
    <string name="newPassengerTitle">Nowy pasażer</string>
    <string name="editPassengerTitle">Edycja pasażera</string>
    <string name="buttonSaveNewRide">Dalej</string>
    <string name="textViewPassengers">Pasażerowie:</string>
    <string name="textViewNoPassengers">Brak</string>
    <string name="buttonReturn">Powrót</string>
    <string name="buttonEditRide">Edytuj</string>
    <string name="buttonCalculate">Oblicz</string>
    <string name="calculateFees">OBLICZ</string>
</resources>
