<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewAddPassengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="22dp"
        android:text="@string/textViewAddPassengers" />

    <LinearLayout
        android:id="@+id/editTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/buttonCancelPassengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/buttonCancel">
        </Button>
        <Button
            android:id="@+id/buttonSavePassengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/buttonSave">
        </Button>
    </LinearLayout>


</LinearLayout>